fixing the mobile navbar

--- a/src/components/Nav/Nav.css
+++ b/src/components/Nav/Nav.css
@@ -55,7 +55,7 @@
 	background-color: #5354ed;
 	display: flex;
 	flex-direction: column;
-	justify-content: space-between;
+	justify-content: center;
 	align-items: center;
 }
 .open{
@@ -69,19 +69,18 @@
 	height: 70%;
 	display: flex;
 	flex-direction: column;
-	justify-content: center;
 }
 .nav-list-item{
 	list-style: none;
-	display: block;
+	display: flex;
 	margin:40px auto;
 	width: 50%;
-	text-align: center;
+	justify-content: center;
+	align-items: center;
 }
 .nav-link-item{
 	text-decoration: none;
 	transition: all 0.1s linear;
-	text-align: left;
 	font-family:Roboto Mono;
 	font-size: 20px;
 	font-weight: 500;
@@ -91,21 +90,6 @@
 }
 .nav-link-item:hover{
 	font-size: 22px;
-}
-#blog-link{
-	background: #FFFFFF 0% 0% no-repeat padding-box;
-	box-shadow: 0px 5px 30px #00000014;
-	border-radius: 24px;
-	opacity: 1;
-	color: #5354ed;
-	font-size: 18px;
-	font: Medium 18px/24px Roboto Mono;
-	letter-spacing: 0;
-	text-align: center;
-	width: 110px;
-	height: 50px;
-	border:none;
-	margin-bottom: 150px;
 }
 .nav-list-item{
 	opacity: 0;
@@ -140,6 +124,29 @@
 .hamburger>span.open-hamburger:nth-child(3){
 	transform:rotate(-45deg) translate(0%,0%);
 	width: 36px;
+}
+#blog-link{
+	background: #FFFFFF 0% 0% no-repeat padding-box;
+	box-shadow: 0px 5px 30px #00000014;
+	border-radius: 24px;
+	opacity: 1;
+	color: #5354ed;
+	font-size: 18px;
+	font: Medium 18px/24px Roboto Mono;
+	letter-spacing: 0;
+	text-align: center;
+	width: 110px;
+	height: 50px;
+	border:none;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	margin-top: 20%;
+	transition: all 0.25s ease;
+}
+#blog-link:hover{
+	background-color: transparent;
+	color:white;
 }
 /*@media only screen and (min-width: 768px) {
 	#nav-logo{
