--- a/src/components/Nav/Nav.css
+++ b/src/components/Nav/Nav.css
@@ -48,15 +48,13 @@
 	right: 0;
 	bottom: 0;
 	width: 100%;
-	height: calc(100vh);
+	height:100vh;
 	clip-path: circle(100px at 100% -50%);
 	-webkit-clip-path: circle(100px at 100% -50%);
 	transition: all 1s ease-out;
 	background-color: #5354ed;
 	display: flex;
-	flex-direction: column;
-	justify-content: center;
-	align-items: center;
+	align-items: flex-end;
 }
 .open{
 	z-index: 1;
@@ -66,17 +64,19 @@
 }
 .nav-list-container{
 	width: 100%;
-	height: 70%;
-	display: flex;
-	flex-direction: column;
+	height: calc(100% - 55px);
+	display: grid;
+	grid-template-columns: 100%;
+	grid-template-rows:15% 15% 15% 15% auto;
+	grid-row-gap: 2.5%;
 }
 .nav-list-item{
 	list-style: none;
 	display: flex;
-	margin:40px auto;
 	width: 50%;
 	justify-content: center;
 	align-items: center;
+	margin:auto;
 }
 .nav-link-item{
 	text-decoration: none;
@@ -141,7 +141,8 @@
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	margin-top: 20%;
+	position: absolute;
+	bottom: ;
 	transition: all 0.25s ease;
 }
 #blog-link:hover{
