--- a/src/components/Intro/Intro.css
+++ b/src/components/Intro/Intro.css
@@ -7,7 +7,6 @@
 	grid-template-columns: 100%;
 	justify-content: center;
 	align-items: center;
-	position: relative;
 	border-bottom: 1.5px solid #5354ed;
 }
 #profile-container{
@@ -95,6 +94,7 @@
 	position: absolute;
 	bottom: 15px;
 	right: 10px;
+	cursor: pointer;
 }
 @media only screen and (min-width: 900px) {
 	.intro-container{
@@ -144,13 +144,13 @@
 	#intro-wrapper{
 		position: relative;
 		width: 100%;
-		height: 75%;
+		height: 85%;
 		overflow-x: hidden;
 	}
 	#profile-wrapper,#profile-container{
 		float: right;
-		height: 600px;
-		width: 600px;
+		height: 725px;
+		width: 725px;
 		border: 10px solid #5354ed;
 		margin-right: -50px;
 		position: relative;
@@ -181,34 +181,39 @@
 		height: 100%;
 	}
 	#hello{
-		font-size: 64px;
+		font-size: 72px;
+	}
+	#break{
+		display: block;
 	}
 	.other{
 		text-align: left;
-		font-size: 32px;
+		font-size: 48px;
 		line-height: 1.6;
 	}
 	#download-resume{
 		margin:0;
 		position: static;
-		height: 55px;
+		height: 50px;
+		width: 200px;
 		margin-top: 300px;
+		font-size: 18px;
 	}
 	#me{
 	background-image:url("../../assets/angelosquare.jpg");
 	background-position: center;
 	background-repeat: no-repeat;
 	background-size: cover;
-	width:68px; 
-	height: 52px;
+	width:90px; 
+	height: 70px;
 	text-align: center;
-	padding-top: 16px;
+	padding-top: 18px;
 	color: #5354ed;
 	font-weight: bold;
-	font-size: 10px;
+	font-size: 18px;
 	position: absolute;
 	bottom: 15px;
-	right: calc(50% - 28px);
+	right: calc(50% - 58px);
 }
 }
 /*@media only screen and (min-width: 1500px){
