--- a/src/components/SkillBox/SkillBox.css
+++ b/src/components/SkillBox/SkillBox.css
@@ -7,7 +7,7 @@
 	height: 250px;
 	background: #222222 0% 0% no-repeat padding-box;
 	box-shadow: 0px 3px 5px #000000FA;
-	border: 1px solid #22222240;
+	border: none;
 	opacity: 1;
 	display: flex;
 	align-items: center;
