--- a/src/components/Skills/Skills.css
+++ b/src/components/Skills/Skills.css
@@ -33,15 +33,15 @@
 	margin-right: 5px;
 }
 #lang-skill-container{
-	height: auto;
-	padding:10px;
+	height: 40px;
+	width:300px;
 	background: #222222 0% 0% no-repeat padding-box;
 	box-shadow: 0px 3px 5px #000000FA;
 	opacity: 1;
 	display: flex;
 	align-items: center;
 	justify-content: center;
-	font-size: 16px;
+	font-size: 18px;
 	font-weight: bold;
 	color: white;
 }
@@ -74,5 +74,6 @@
 		align-items: center;
 		flex-direction: row;
 		justify-content: flex-end;
+		margin-top: 75px;
 	}
 }
