--- a/src/index.css
+++ b/src/index.css
@@ -67,3 +67,26 @@ code {
   -webkit-animation-iteration-count: infinite;
           animation-iteration-count: infinite;
 }
+#style-7::-webkit-scrollbar-track
+{
+    -webkit-box-shadow: inset 0 0 6px rgba(255,255,255,0.2);
+    background-color: #5354ed;
+    border-radius: 10px;
+}
+
+#style-7::-webkit-scrollbar
+{
+    width: 5.5px;
+    background-color: #5354ed;
+}
+
+#style-7::-webkit-scrollbar-thumb
+{
+    border-radius: 5px;
+    background-image: -webkit-gradient(linear,
+                                       left bottom,
+                                       left top,
+                                       color-stop(0.44, rgb(73,125,189)),
+                                       color-stop(0.72, rgb(73,125,189)),
+                                       color-stop(0.86, rgb(73,125,189)));
+}
