--- a/src/components/Intro/Intro.css
+++ b/src/components/Intro/Intro.css
@@ -82,7 +82,6 @@
 	color: #5354ed; 
 }
 #bubble{
-	background-image:url("../../assets/angelosquare.jpg");
 	background-position: center;
 	background-repeat: no-repeat;
 	background-size: cover;
@@ -146,8 +145,11 @@
 	#intro-wrapper{
 		position: relative;
 		width: 100%;
-		height: 85%;
+		height: 100%;
 		overflow-x: hidden;
+		display: flex;
+		align-items: flex-start;
+		justify-content: space-between;
 	}
 	#profile-wrapper,#profile-container{
 		float: right;
@@ -202,27 +204,18 @@
 		font-size: 18px;
 	}
 	#bubble{
-	background-image:url("../../assets/angelosquare.jpg");
-	background-position: center;
-	background-repeat: no-repeat;
-	background-size: cover;
-	width:90px; 
-	height: 70px;
-	text-align: center;
-	padding-top: 18px;
-	color: #5354ed;
-	font-weight: bold;
-	font-size: 18px;
-	position: absolute;
-	bottom: 15px;
-	right: calc(50% - 58px);
+		background-position: center;
+		background-repeat: no-repeat;
+		background-size: cover;
+		width:90px; 
+		height: 70px;
+		text-align: center;
+		padding-top: 18px;
+		color: #5354ed;
+		font-weight: bold;
+		font-size: 18px;
+		position: absolute;
+		bottom: 15px;
+		right: calc(50% - 58px);
+ }
 }
-}
-/*@media only screen and (min-width: 1500px){
-	#intro-text{
-		font-size: 48px;
-	}
-	#typewritter{
-		font-size: 28px;
-	}
-}*/
