--- a/src/components/Contact/Contact.css
+++ b/src/components/Contact/Contact.css
@@ -95,7 +95,7 @@ input,textarea{
 	border-radius: 2px;
 	padding:15px;
 	font-size: 14px;
-	background-color: #00000025;
+	background-color: #00000004;
 	color: #222;
 	letter-spacing: 1.5px;
 }
@@ -128,6 +128,8 @@ input:focus,textarea:focus{
 	justify-content: center;
 	align-items: center;
 	font-size: 14px;
+	border-top: 0.5px solid #22222277;
+	box-shadow: -3px 0px 25px #22222226;
 }
 #logo-footer,#love{
 	margin:0 4px;
