--- a/src/components/Contact/Contact.css
+++ b/src/components/Contact/Contact.css
@@ -3,7 +3,7 @@
 	height: 100vh;
 	display: grid;
 	grid-template-columns: 100%;
-	grid-template-rows: 10% auto 36px;
+	grid-template-rows:10% auto 30px;
 }
 #contact-title{
 	width: 100%;
@@ -13,28 +13,35 @@
 	height: 100%;
 }
 #contact-image-title{
-	height: 64px;
+	height: 50%;
+	min-height: 45px;
 }
 #contact-wrapper{
 	display: grid;
 	grid-template-columns: 100%;
-	grid-template-rows: 36px auto;
+	grid-template-rows: 30px auto;
 	height: 100%;
 	width: 100%;
 }
 #form-container{
 	display: grid;
 	grid-template-columns: 100%;
-	grid-template-rows: 15% 15% auto 50px 50px;
+	grid-template-rows:70px 70px  auto 50px 2%;
+	grid-row-gap: 5px;
 	text-align: center;
+	width: 94%;
+	margin:auto;
+	max-width: 1200px;
+	height: 100%;
+	padding:15px 0;
 }
 .input-container{
 	display: flex;
 	justify-content: center;
-	align-items: center;
-	width: 94%;
-	margin:auto;
-	max-width: 1200px;
+	align-items: flex-start;
+	width: 100%;
+	height: 100%;
+	min-height: 50px;
 }
 .input-wrapper{
 	display: flex;
@@ -42,7 +49,7 @@
 	align-items: flex-start;
 	flex-direction: column;
 	width: 100%;
-	height: 100%;
+	height: 90%;
 }
 .focus-line{
 	background-color: #5354ed;
@@ -74,20 +81,19 @@
 	width: 100%;
 }
 .input-text{
-	height: 56px;
+	height: 100%;
 	width: 100%;
 }
 #textzone-container{
 	height: 100%;
-	width: 94%;
+	width: 100%;
 	display: flex;
 	justify-content: center;
-	align-items: center;
-	margin:auto;
-	max-width: 1200px;
+	align-items: flex-start;
+	min-height: 200px;
 }
 #textzone{
-	height: calc(100% - 56px);
+	height: 100%;
 	width: 100%;
 }
 input,textarea{
@@ -95,7 +101,6 @@ input,textarea{
 	border-radius: 2px;
 	padding:15px;
 	font-size: 14px;
-	background-color: #00000004;
 	color: #222;
 	letter-spacing: 1.5px;
 }
@@ -108,11 +113,12 @@ input:focus,textarea:focus{
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	max-width: 1200px;
+	width: 100%;
+	height: 100%;
 }
 #button{
 	background-color: #5354ed;
-	width: 94%;
+	width: 90%;
 	height: 44px;
 	border-radius: 5px;
 	display: flex;
@@ -127,9 +133,9 @@ input:focus,textarea:focus{
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	font-size: 14px;
+	font-size: 12px;
 	border-top: 0.5px solid #22222277;
-	box-shadow: -3px 0px 25px #22222226;
+	color: #222;
 }
 #logo-footer,#love{
 	margin:0 4px;
@@ -157,5 +163,4 @@ input:focus,textarea:focus{
 	#button{
 		width: 100px;
 	}
-
 }
