--- a/src/components/Intro/Intro.css
+++ b/src/components/Intro/Intro.css
@@ -1,13 +1,21 @@
 .intro-container{
-	height: calc(100vh - 55px);
+	height:100vh;
 	width: 100%;
 	color:#222;
 	display: grid;
-	grid-template-rows: 7.5% 92.5%;
+	grid-template-rows: 100%;
 	grid-template-columns: 100%;
 	justify-content: center;
 	align-items: center;
 	border-bottom: 1.5px solid #5354ed;
+}
+#intro-wrapper{
+	padding-top: 100px;
+}
+#social-intro{
+	position: absolute;
+	top: 65px;
+	width: 100%;
 }
 #profile-container{
 	height: 260px;
@@ -93,7 +101,7 @@
 	font-weight: bold;
 	font-size: 10px;
 	position: absolute;
-	bottom: 15px;
+	bottom: 10px;
 	right: 10px;
 	cursor: pointer;
 }
@@ -102,7 +110,10 @@
 		display: grid;
 		grid-template-rows: 100%;
 		grid-template-columns: 10% 90%;
-		height: calc(100vh - 65px);
+		height: 100vh;
+	}
+	#social-intro{
+		position: static;
 	}
 	#social-container{
 		width:50%;
