--- a/src/index.css
+++ b/src/index.css
@@ -12,6 +12,9 @@ body {
 	margin:0;
 	box-sizing: border-box;
 }
+html{
+  scroll-behavior: smooth;
+}
 html,body,#root{
 	width: 100%;
 	height: 100%;
