border on contact input

--- a/src/components/Contact/Contact.css
+++ b/src/components/Contact/Contact.css
@@ -103,6 +103,7 @@ input,textarea{
 	font-size: 14px;
 	color: #222;
 	letter-spacing: 1.5px;
+	border-bottom:1px solid #22222211;
 }
 input:focus,textarea:focus{
 	border:none;
